# VideoPhotoBookv2

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: VideoPhotoBook.xml
app/src/main/cpp/: CMakeLists.txt  GLESRenderer.cpp  GLESRenderer.h  GLESUtils.cpp  GLESUtils.h  Jni.cpp  Shaders.h  VuforiaController.cpp  VuforiaController.h  native-lib.cpp
app/src/main/cpp/include/VuforiaEngine/: VuforiaEngine.h
app/src/main/cpp/include/VuforiaEngine/Controller/: CameraController.h
app/src/main/cpp/include/VuforiaEngine/Observer/: AreaTargetObserver.h  ModelTargetObserver.h  ValidationAreaObserver.h
app/src/main/res/anim/: nav_slide_enter_anim.xml  nav_slide_exit_anim.xml  nav_slide_pop_enter_anim.xml  nav_slide_pop_exit_anim.xml  nav_zoom_enter_anim.xml  nav_zoom_exit_anim.xml  nav_zoom_pop_enter_anim.xml  nav_zoom_pop_exit_anim.xml
app/src/main/res/drawable/: add_image.xml  arrow_left.xml  double_rectangle.xml  ic_share.xml  icon_menu.xml
app/src/main/res/layout/: activity_ar.xml  activity_entrance.xml  activity_main.xml  dialog_marker_video.xml  fragment_ar.xml  fragment_entry.xml  fragment_free.xml  fragment_gatherpoint.xml  fragment_image_pick_bottom_dialog.xml  fragment_linking_settings_dialog.xml  fragment_main.xml  fragment_paid.xml  fragment_permissions.xml  fragment_send_image_dialog.xml  fragment_setting.xml  fragment_settings.xml  fragment_staging.xml  guided_dialog.xml  list_item_logtxt.xml  list_item_marker.xml  (+1 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+46 files in other folders)
